[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/timer.gd" type="Script" id=1]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://Background/TiltWarp-Regular-VariableFont_XROT,YROT.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Tilemap/Items-_kopia_.png" type="Texture" id=4]
[ext_resource path="res://HUD/heart pixel art 254x254.png" type="Texture" id=5]
[ext_resource path="res://HUD/red.png" type="Texture" id=6]
[ext_resource path="res://HUD/green.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 3 )

[node name="HUD" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Timer" type="Label" parent="CanvasLayer"]
margin_left = 866.0
margin_top = -1.0
margin_right = 1010.0
margin_bottom = 40.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "00:00:00"
script = ExtResource( 1 )

[node name="PanelRED" type="Panel" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.309804 )
margin_left = 885.0
margin_top = 40.0
margin_right = 1009.0
margin_bottom = 80.0

[node name="RedDiamond" type="Sprite" parent="CanvasLayer"]
position = Vector2( 910, 60 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 1444.64, 655.56, 47.2028, 36.4332 )

[node name="CurrentCounterRed" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 938.0
margin_top = 33.0
margin_right = 964.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="CounterRed" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 962.0
margin_top = 33.0
margin_right = 1003.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 3 )
text = "/6"

[node name="PanelGreen" type="Panel" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.309804 )
margin_left = 884.0
margin_top = 87.0
margin_right = 1009.0
margin_bottom = 127.0

[node name="GreenDiamond" type="Sprite" parent="CanvasLayer"]
position = Vector2( 910, 107 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 1500.59, 656.002, 43.8717, 35.8764 )

[node name="CurrentCounterGreen" type="Label" parent="CanvasLayer"]
modulate = Color( 0.478431, 1, 0.513726, 1 )
margin_left = 936.0
margin_top = 79.0
margin_right = 962.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 4 )
text = "0"

[node name="CounterGreen" type="Label" parent="CanvasLayer"]
modulate = Color( 0.501961, 1, 0.521569, 1 )
margin_left = 960.0
margin_top = 80.0
margin_right = 1003.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 5 )
text = "/5"

[node name="PanelKey" type="Panel" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.309804 )
margin_left = 884.0
margin_top = 133.0
margin_right = 1006.0
margin_bottom = 173.0

[node name="Nyckel" type="Sprite" parent="CanvasLayer"]
position = Vector2( 931, 151 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 1448.67, 595.384, 90.118, 45.3053 )

[node name="Heart1" type="Sprite" parent="CanvasLayer"]
position = Vector2( 27, 21 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Heart2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 57, 21 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Heart3" type="Sprite" parent="CanvasLayer"]
position = Vector2( 87, 21 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Heart4" type="Sprite" parent="CanvasLayer"]
position = Vector2( 117, 21 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Heart5" type="Sprite" parent="CanvasLayer"]
position = Vector2( 147, 21 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Heart6" type="Sprite" parent="CanvasLayer"]
position = Vector2( 177, 21 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Heart7" type="Sprite" parent="CanvasLayer"]
position = Vector2( 207, 21 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Heart8" type="Sprite" parent="CanvasLayer"]
position = Vector2( 237, 21 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Heart9" type="Sprite" parent="CanvasLayer"]
position = Vector2( 267, 21 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="key_true" type="Sprite" parent="CanvasLayer"]
position = Vector2( 987.885, 153.632 )
scale = Vector2( 0.0921672, 0.0937056 )
texture = ExtResource( 7 )

[node name="key_false" type="Sprite" parent="CanvasLayer"]
position = Vector2( 988, 154 )
scale = Vector2( 0.0231068, 0.0227029 )
texture = ExtResource( 6 )
